# specgraph

./: .gitignore  README.md  pyproject.toml
src/specgraph/: __init__.py  cli.py
src/specgraph/prompts/: __init__.py  clarify_prompts.py  plan_prompts.py  specify_prompts.py  tasks_prompts.py
src/specgraph/utils/: __init__.py  file_manager.py
src/specgraph/workflows/: __init__.py  clarify.py  plan.py  specify.py  tasks.py
